<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightPink"
        tools:context=".view.fragment.HomeInventoryFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:background="@drawable/header_background"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloInventario"
                android:layout_marginTop="50dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/headerImage"
                app:layout_constraintBottom_toTopOf="@id/tvTitulo2"
                />

            <TextView
                android:id="@+id/tvTitulo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloInventario2"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/tvTitulo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/headerImage"/>


            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:contentDescription="Logo"
                android:src="@drawable/dog_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvTitulo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtituloInventario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/tituloApp"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/headerImage"
                app:layout_constraintStart_toEndOf="@id/tvTitulo2"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/item_inventory" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbagregar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/pink"
            android:contentDescription="button add"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"/>


        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>